# cortex

./: .clang-format  .coderabbit.yaml  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  commitlint.config.cjs  cross-toolchain.cmake  release-please-config.json  rust-toolchain.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  commitlint.yml  deploy-docs.yml  release-please.yml
bench/: CMakeLists.txt
bench/energy_model/: README.md  test_vio_energy_model.py  vio_energy_model.py
bench/include/branes/bench/: energy_backend.hpp  operator_profile.hpp  rapl.hpp  report.hpp  tegrastats.hpp
bench/src/: vio_bench.cpp
cmake/: compile_all.cmake  deps.cmake
core/: Cargo.toml  build.rs
core/src/: bridge.rs  error.rs  kpu_provider.rs  lib.rs  lifecycle.rs  memory_provider.rs  sitl_provider.rs
cv/: CMakeLists.txt
cv/include/branes/cv/: fast.hpp  image.hpp  image_io.hpp  klt.hpp  pyramid.hpp
cv/src/: image_io.cpp
docs-site/: .gitignore  Doxyfile  astro.config.mjs  package-lock.json  package.json
docs-site/scripts/: gen-augmentation-figures.mjs  gen-benchmarks.mjs  gen-calibration-figures.mjs  gen-init-figures.mjs  gen-marginalization-figures.mjs  gen-overlay.mjs  gen-propagation-figures.mjs  gen-scene3d-video.mjs  gen-sensor-model-figures.mjs  gen-update-figures.mjs  scene3d-render.html
docs/adr/: 0001-third-party-license-compatibility.md
docs/arch/: cortex-repo.md  (+3 more)
math/: CMakeLists.txt
math/include/branes/math/: arithmetic.hpp  cameras.hpp  krylov.hpp  lie.hpp  nls.hpp  sparse.hpp  sparse_direct.hpp  tensor.hpp
math/include/branes/math/cameras/: detail.hpp  equidistant.hpp  pinhole_radtan.hpp  unified.hpp
math/include/branes/math/lie/: detail.hpp  se23.hpp  se3.hpp  sim3.hpp  so3.hpp
math/include/branes/math/nls/: dense_linalg.hpp  solver.hpp
scripts/: bootstrap.ps1  bootstrap.sh  euroc-moving-start.sh  sweep_Q_SCALE.sh  vio-euroc-architecture.md  vio-euroc-numerical-failure-modes.md  vio_scene_video.sh
sdk/: CMakeLists.txt
sdk/include/branes/sdk/: features.hpp  imu_init.hpp  imu_preintegration.hpp  msckf.hpp  msckf_backend.hpp  sliding_window_backend.hpp  vio_backend.hpp  vio_estimator.hpp
sdk/include/branes/sdk/euroc/: asl_replay.hpp
sdk/include/branes/sdk/eval/: allan_variance.hpp  calibration_probe.hpp  clone_window_probe.hpp  consistency.hpp  frontend_probe.hpp  initialization_probe.hpp  innovation_whiteness.hpp  latency_budget.hpp  nav_consistency.hpp  observability_probe.hpp  propagation_probe.hpp  sensor_model_probe.hpp  synthetic_world.hpp  trajectory_metrics.hpp  triangulation_probe.hpp  update_probe.hpp
sdk/include/branes/sdk/features/: msckf_nullspace.hpp  representations.hpp
sdk/include/branes/sdk/msckf/: camera_updater.hpp  covariance.hpp  dense.hpp  invariant_propagator.hpp  invariant_update.hpp  invariant_vio_backend.hpp  msckf_invariant_backend.hpp  propagator.hpp  qr.hpp  sqrt_covariance.hpp  state.hpp  state_helper.hpp
sdk/include/branes/sdk/sfm/: init_window.hpp  pnp.hpp  two_view.hpp
tests/: CMakeLists.txt  bench_vio_bench_test.cpp  cv_fast_test.cpp  cv_image_test.cpp  cv_klt_test.cpp  cv_pyramid_test.cpp  cxx_bridge_test.cpp  deps_smoke_test.cpp  math_cameras_test.cpp  math_krylov_test.cpp  math_lie_test.cpp  math_nls_test.cpp  math_sparse_direct_test.cpp  math_sparse_test.cpp  math_tensor_test.cpp  sdk_features_test.cpp  sdk_imu_init_test.cpp  sdk_imu_preintegration_test.cpp  sdk_msckf_backend_test.cpp  sdk_msckf_camera_test.cpp  sdk_msckf_state_test.cpp  sdk_sliding_window_backend_test.cpp  sdk_vio_backend_test.cpp  sdk_vio_estimator_test.cpp  sdk_vio_latency_test.cpp
tests/cv/: gaussian_pyramid.cpp  image_io.cpp
tests/include/branes/test/: budgets.hpp  timing.hpp
tests/integration/: deps_smoke_test.cpp
tests/math/: arithmetic_types.cpp  lie_groups.cpp  math_lie_test.cpp  math_nls_test.cpp  nls_golden.cpp  tensor_view.cpp
tests/sdk/: allan_variance.cpp  calib_jacobians.cpp  calib_recovery.cpp  calibration_probe.cpp  clone_window_probe.cpp  consistency.cpp  fej.cpp  imu_init.cpp  init_window.cpp  initialization_probe.cpp  innovation_whiteness.cpp  invariant_joint_step_fd.cpp  invariant_propagator.cpp  invariant_update.cpp  invariant_vio_backend.cpp  msckf_backend.cpp  msckf_camera_update.cpp  msckf_dynamic_init.cpp  msckf_invariant_backend.cpp  msckf_sqrt_backend.cpp  msckf_state.cpp  nav_consistency.cpp  observability_probe.cpp  pnp.cpp  propagation_probe.cpp  sdk_features_test.cpp  sdk_imu_init_test.cpp  sdk_msckf_state_test.cpp  sdk_vio_estimator_test.cpp  sdk_vio_euroc_test.cpp  sensor_model_probe.cpp  synthetic_world.cpp  triangulation_probe.cpp  two_view_sfm.cpp  update_probe.cpp  vio_estimator.cpp  vio_euroc.cpp  vio_latency.cpp
tests/tools/: invariant_backend_adapter.cpp  observability_inspect.cpp  s0_sensor_model_inspect.cpp  s10_calibration_inspect.cpp  s1_init_inspect.cpp  s2_propagation_inspect.cpp  s3_augmentation_inspect.cpp  s4_frontend_inspect.cpp  s5_triangulation_inspect.cpp  s6_update_inspect.cpp  s9_marginalization_inspect.cpp  vio_trace.cpp  vio_trace_tap.cpp
tools/: CMakeLists.txt  README.md
tools/include/branes/tools/: invariant_backend_adapter.hpp  observability_inspect.hpp  s0_sensor_model_inspect.hpp  s10_calibration_inspect.hpp  s1_init_inspect.hpp  s2_propagation_inspect.hpp  s3_augmentation_inspect.hpp  s4_frontend_inspect.hpp  s5_triangulation_inspect.hpp  s6_update_inspect.hpp  s9_marginalization_inspect.hpp  stage_probe.hpp  vio_stage_contracts.hpp  vio_trace.hpp  vio_trace_tap.hpp
tools/src/: asl_trace.cpp  invariant_nees_verdict.cpp  obs_inspect.cpp  s0_inspect.cpp  s0_sensor_model.cpp  s10_inspect.cpp  s10_online_calibration.cpp  s1_initialization.cpp  s1_inspect.cpp  s2_inspect.cpp  s2_propagation.cpp  s3_augmentation.cpp  s3_inspect.cpp  s4_frontend.cpp  s4_inspect.cpp  s5_inspect.cpp  s5_triangulation.cpp  s6_inspect.cpp  s6_msckf_update.cpp  s7_slam_features.cpp  s8_zero_velocity.cpp  s9_inspect.cpp  s9_marginalization.cpp  vio_pipeline.cpp  vio_trace_demo.cpp
(+85 files in other folders)
