[package]
name = "cortex-core"
version = "0.0.1"
edition = "2021"
publish = false
license = "MIT"
description = "Cortex Rust Resource Manager — KPU memory pools + cxx bridge to the C++ SDK"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cxx = "=1.0.130"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mman", "fs"] }
libc = "0.2"

[build-dependencies]
cxx-build = "=1.0.130"
